# llama_with_copilot

./: .env  Pipfile  README.md  main.py  output.txt  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
storage/: default__vector_store.json  docstore.json  index_store.json
