[tool.poetry]
name = "llamacopilot"
version = "0.1.0"
description = ""
authors = ["syam-sahu <132860070+syam-sahu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.45"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
